# mpc-car-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_ipopt.sh  install_uwebsocket.sh
src/: MPC.cpp  MPC.h  main.cpp
